# otus_hl_service

./: .dockerignore  .env  .env_local  .env_template  .flake8  .gitignore  .sort.cfg  Makefile  README.md  _app.Dockerfile  _load_data.Dockerfile  alembic.ini  docker-compose.env  docker-compose.yml  docker-compose_postgre_dev.yml  main.py  pyproject.toml  setup.cfg
app/: server.py
app/api/v1/: __init__.py
app/api/v1/controllers/: __init__.py  user_controller.py
app/api/v1/models/: __init__.py  user_model.py
app/api/v1/views/: view_health_check.py  view_user.py
app/core/based/: __init__.py  base_controller.py  based_response_models.py
app/core/models/: common.py
app/core/monitoring/: __init__.py  logger.py
app/core/settings/: __init__.py  application_settings.py  database_settings.py  general_settings.py
app/database/: db.py
app/database/models/: __init__.py  base.py  enum.py  user.py
app/enums/: base_enums.py  response.py
app/handlers/: __init__.py  exception_handler.py
app/middlewares/: __init__.py  logging_middleware.py
app/utils/: security.py
migrations/: env.py
migrations/versions/: 2024_09_02_1132-c2c9c40d0879_user_model.py  2024_09_03_1746-8da7c18bfebe_user_model.py  2024_09_23_2204-1f48cfeb05b4_init.py
other_apps/: postman_collection.json
scripts/: common.sql  create_db.sql  load_data.sh
scripts/postgres_config/master/: init-master.sh
scripts/postgres_config/slave/: init-slave.sh
