[tool.poetry]
name = "social network backend"
version = "0.1.0"
description = "Сервис социальной сети для учебного проекта"
authors = ["Lev Kakalashvili <kakalashvililev@yandex.ru.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.112.2"}
sqlalchemy = "^2.0.32"
sqlalchemy-utils = "^0.41.2"
python-json-logger = "^2.0.7"
alembic = "^1.13.2"
pydantic = "^2.8.2"
alembic-postgresql-enum = "^1.3.0"
asyncpg = "^0.29.0"

[tool.poetry.dev-dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
